# functions

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.mdx  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  velite.config.ts  vitest.config.cli.ts  vitest.config.ts  vitest.e2e.config.ts  vitest.e2e.workers.config.ts  vitest.node.config.ts  worker-configuration.d.ts  wrangler.e2e.jsonc  wrangler.jsonc  wrangler.test.jsonc
.beads/: issues.jsonl  sync_base.jsonl
.github/workflows/: ci.yml
assets/: README.md
benchmark/esbuild-wasm/: worker.ts  wrangler.jsonc
benchmarks/worker-rpc-latency/: README.md
cli/: context.ts  index.ts  types.ts  vitest.config.ts
cli/__tests__/: delete.test.ts  deploy.test.ts  init.test.ts  invoke.test.ts  list.test.ts  logs.test.ts  rollback.test.ts  secrets.test.ts  status.test.ts
cli/commands/: delete.ts  deploy.ts  init.ts  invoke.ts  list.ts  logs.ts  rollback.ts  secrets.ts  status.ts
communication/: sendEmail.mdx
core/: package.json  tsconfig.json
core/src/: branded-types.ts  cascade.ts  index.ts  schemas.ts  type-guards.ts  types.ts  utils.ts
development/: analyzeCode.mdx  generateDocs.mdx  optimizeQuery.mdx  parseCode.mdx
docs/: ESBUILD_WASM_DESIGN.md  api-reference.md  getting-started.md
docs/__tests__/: api-reference.test.ts  getting-started.test.ts  language-guides.test.ts
docs/architecture/: overview.md
docs/spikes/: capnweb-rpctarget-worker-loader.md  dotnet-do-runtime.md  dotnet-shared-runtime.md  r2-data-catalog-iceberg.md  wasm-binary-deployment.md  worker-loader-miniflare.md  worker-rpc-latency.md
ecommerce/: calculateShipping.mdx  validateOrder.mdx
finance/: assessRisk.mdx  calculateROI.mdx  detectFraud.mdx
functions/: send-email.mdx
poc/dotnet-thin-stub/: README.md
scripts/: test-with-lock.sh
sdk-templates/assemblyscript/: README.md  asconfig.json  bindings.ts  package.json  tsconfig.json  types.d.ts
sdk-templates/cpp/: CMakeLists.txt  README.md  bindings.ts  types.d.ts
sdk-templates/go/: Makefile  README.md  bindings.ts  go.mod  main.go  types.d.ts  wrangler.toml
sdk-templates/python/: README.md  pyproject.toml  requirements.txt  wrangler.toml
sdk-templates/python/__tests__/: template.test.ts
sdk-templates/python/src/: __init__.py  handler.py  utils.py
sdk-templates/python/tests/: __init__.py  test_handler.py  test_utils.py
sdk-templates/rust/: Cargo.toml  README.md  build.sh  wrangler.toml
sdk-templates/rust/__tests__/: template.test.ts
sdk-templates/rust/src/: lib.rs
sdk-templates/typescript/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
sdk-templates/zig/: README.md  bindings.ts  build.zig  types.d.ts
src/: index.ts  template-literals.ts
src/__tests__/: agentic-e2e.test.ts  api-deploy.test.ts  api-details.test.ts  api-invoke.test.ts  api-list.test.ts  api-logs.test.ts  api-rollback.test.ts  api-router.test.ts  deploy-compilation.test.ts  domain-routing.test.ts  index.test.ts  (+5 more)
test/: esbuild-compiler.test.ts  runtime-compilation.test.ts
verbs/: create.mdx
(+325 files in other folders)
