[package]
name = "{{function_name}}"
version = "0.1.0"
edition = "2021"
description = "Functions.do serverless function"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Functions.do SDK with capnweb bindings
functions-do = { git = "https://github.com/drivly/functions-do-sdk-rust", optional = true }

# wasm-bindgen for WASM bindings
wasm-bindgen = "0.2"

# Optional serde for JSON serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["functions-do"]
json = ["serde", "serde_json"]

[profile.release]
# Optimize for size to target 10-50KB output
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"
